update the blog, details and card

--- a/e-commerce/src/views/blog/blogdetails-styles.css
+++ b/e-commerce/src/views/blog/blogdetails-styles.css
@@ -120,6 +120,10 @@
         border: 1px solid rgb(156, 155, 155);
         font-size: 2rem;
     }
+
+     button{
+        padding: 0.2rem 0.6rem;
+            }
     
      @media screen and (max-width: 992px) {
         .blog-details-layout{
