fied some styles onpdtdetails

--- a/e-commerce/src/views/styles/ProductDetails.css
+++ b/e-commerce/src/views/styles/ProductDetails.css
@@ -39,7 +39,7 @@ div .promo {
   margin-right: 0.3rem;
 }
 
-.details-container {
+.pdtdetails-container {
   display: grid;
   grid-template-columns: auto auto;
   gap: 20px;
@@ -79,21 +79,31 @@ div .promo {
   text-decoration: none;
 }
 
+.sizes {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+
 .size {
-  margin-right: 3rem;
+  margin-right: 2rem;
 }
 .size-btn button {
   margin-right: 0.4rem;
   height: 40px;
   width: 40px;
-  margin-top: 2em;
   background: #fff;
 }
 
 select {
-  margin-top: 2rem;
-  margin-left: 2rem;
+  margin-left: 1.6rem;
   padding: 0.5rem 2rem;
+}
+.color {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin: auto;
+  margin-top: 1rem;
 }
 
 .qty-btn {
@@ -113,6 +123,11 @@ select {
   padding: 0.5rem 1.5rem;
   color: #fff;
   background: #ff7373;
+}
+
+.qty {
+  display: flex;
+  align-items: center;
 }
 .qty,
 .share {
