--- a/e-commerce/src/views/styles/ProductDetails.css
+++ b/e-commerce/src/views/styles/ProductDetails.css
@@ -20,6 +20,7 @@ div .promo {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
   color: #ff7373;
+  margin-top: 1rem;
 }
 
 .home-list {
@@ -230,4 +231,107 @@ ul.steps-list li a {
 .pdt-images {
   height: 620px;
   width: 540px;
+}
+
+/* media queries */
+@media (max-width: 563px) {
+  .intro-container {
+    max-width: 530px;
+  }
+
+  .pdtdetails-container {
+    display: block;
+    margin-top: -7rem;
+  }
+  .pdt-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+  }
+  .pdt-images img.main-img {
+    width: 380px;
+    margin-bottom: 1rem;
+  }
+  .small-images {
+    width: 400px;
+    justify-content: center;
+  }
+
+  .small-img {
+    width: 120px;
+    margin-right: 0.42rem;
+  }
+
+  .pdt-specs h1 {
+    margin-top: -4rem;
+  }
+  .add-to-cart {
+    font-size: 0.8rem;
+  }
+
+  .product-description ul.steps-list {
+    width: 100%;
+  }
+
+  .product-description ul.steps-list li {
+    font-size: 0.8rem;
+    margin-right: 0.6rem;
+  }
+
+  .related-pdts-img {
+    /* display: grid;
+    grid-template-columns: auto auto; */
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 380px;
+    transform: translateX(20%);
+  }
+}
+
+@media (max-width: 768px) {
+  .pdtdetails-container {
+    display: block;
+    margin-top: -1rem;
+  }
+
+  .product-description ul.steps-list {
+    width: 100%;
+  }
+
+  .related-pdts-img {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 0 auto;
+  }
+
+  h1.promo {
+    text-align: justify;
+  }
+}
+
+@media (max-width: 992px) {
+  .intro-container {
+    width: 100%;
+    margin: 0 auto;
+
+  }
+  .pdt-images {
+    width: 400px;
+  }
+  .pdt-images img.main-img {
+    width: 400px;
+    margin-bottom: 1rem;
+  }
+  .small-images {
+    width: 400px;
+    justify-content: center;
+  }
+
+  .small-img {
+    width: 130px;
+    margin-right: 0.42rem;
+  }
 }
