Responsiv Design Product Page
Kommenterade bort lite av cssen från andra filer då den var lite för "global".

Fixade show options när man "gettar" card datan.

--- a/e-commerce/src/views/styles/Home.css
+++ b/e-commerce/src/views/styles/Home.css
@@ -6,12 +6,12 @@
   --clr-pink: #FF7373;
   --clr-grey: #BEBEBE;
 }
-
-* {
+/* Temp lösning för att fixa css på product page */
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 html,
 body {
