--- a/e-commerce/src/views/styles/ProductDetails.css
+++ b/e-commerce/src/views/styles/ProductDetails.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-* {
+/* Temp lösning för att fixa css på product page */
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} */
 
 html,
 body {
@@ -95,11 +95,11 @@ div .promo {
   width: 40px;
   background: #fff;
 }
-
-select {
+/* Temp lösning för att fixa css på product page */
+/* select {
   margin-left: 1.6rem;
   padding: 0.5rem 2rem;
-}
+} */
 .color {
   display: grid;
   grid-template-columns: auto auto;
