--- a/e-commerce/src/views/styles/Home.css
+++ b/e-commerce/src/views/styles/Home.css
@@ -69,7 +69,7 @@ body {
   background-color: var(--clr-pink);
   color: white;
 }
-.home.btn-pink::before,
+.home .btn-pink::before,
 .home .btn-black::before {
   content: "";
   position: absolute;
@@ -104,7 +104,10 @@ body {
 /* HOME - HEADER */
 .home .header {
   background-color: var(--clr-showcase-bg);
-  /* height: 85vh; */
+}
+.home .fa-bars {
+  font-size: x-large;
+  display: none;
 }
 .home .header .container .menu {
   display: flex;
