--- a/e-commerce/src/views/styles/Home.css
+++ b/e-commerce/src/views/styles/Home.css
@@ -69,6 +69,7 @@ body {
   background-color: var(--clr-pink);
   color: white;
 }
+
 .btn-pink::before,
 .btn-black::before {
   content: "";
@@ -81,6 +82,7 @@ body {
   border-left: 2px solid white;
   border-top: 2px solid white;
 }
+
 .btn-pink::after,
 .btn-black::after {
   content: "";
@@ -106,17 +108,20 @@ body {
   background-color: var(--clr-showcase-bg);
   height: 85vh;
 }
+
 .home .header .container .menu {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-block: 1rem;
 }
+
 .home .header .menu .brand {
   color: var(--clr-title);
   font-size: 35px;
   font-weight: bold;
 }
+
 .home .header .container .menu .nav-links {
   display: flex;
   align-items: center;
@@ -126,26 +131,31 @@ body {
   left: 50%;
   transform: translate(-50%);
 }
+
 .home .header .menu .nav-links a {
   color: var(--clr-title);
   font-size: 16;
   text-decoration: none;
 }
+
 .home .header .menu .menu-icons {
   display: flex;
   align-items: center;
   gap: 1rem;
 }
+
 .home .header .menu .menu-icons i {
   padding: .5rem;
   background-color: white;
   border-radius: 50%;
   position: relative
 }
+
 .home .header .menu .menu-icons i:hover {
   background-color: var(--clr-title);
   color: white;
 }
+
 .home .number {
   position: absolute;
   top: -5px;
@@ -173,14 +183,17 @@ body {
   text-align: center;
   color: var(--clr-title);
 }
+
 .home .showcase img {
   height: 73vh;
 }
+
 .home .showcase .text h1 {
   font-weight: 800;
   font-size: 65px;
   line-height: 75px;
 }
+
 .home .showcase .text p {
   font-size: 20px;
   margin-block: 2rem;
@@ -191,9 +204,11 @@ body {
 .home .second-showcase {
   margin-block: 3rem;
 }
+
 .home .second-showcase .container {
   display: flex;
 }
+
 .home .second-showcase .container .first-placeholder {
   flex: 2;
   background-image: url(../../img/showcase-img-1.svg);
@@ -206,6 +221,7 @@ body {
   padding-top: 4rem;
   height: 47vh;
 }
+
 .home .second-showcase .container .first-placeholder p,
 .home .second-showcase .container .second-placeholder p {
   margin-block: 1rem;
@@ -224,6 +240,7 @@ body {
   padding-top: 8rem;
   height: 47vh;
 }
+
 .home .second-showcase .container .second-placeholder h2,
 .home .second-showcase .container .first-placeholder h2 {
   margin-bottom: 1rem;
@@ -239,6 +256,7 @@ body {
   text-align: center;
   margin-bottom: 3rem;
 }
+
 .home .featured .products {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -246,25 +264,31 @@ body {
   gap: 1.5rem;
   margin-top: 1rem;
 }
+
 .home .product-item .text {
   display: flex;
   flex-direction: column;
 }
+
 .home .product-item {
   position: relative;
 }
+
 .home .product-item:hover .quick-view,
 .home .product-item:hover .featured-icons i,
 .home .product-item:hover .layer {
   display: block;
 
 }
+
 .home .product-item .gray-box {
   width: 220px;
 }
+
 .home .clr-gray {
   color: gray;
 }
+
 .home .not-so-strong {
   font-weight: 600;
 }
@@ -282,6 +306,7 @@ body {
   color: white;
   z-index: 1;
 }
+
 .home .quick-view::before {
   content: "";
   position: absolute;
@@ -293,6 +318,7 @@ body {
   border-left: 2px solid white;
   border-top: 2px solid white;
 }
+
 .home .quick-view::after {
   content: "";
   position: absolute;
@@ -304,16 +330,18 @@ body {
   border-right: 2px solid white;
   border-bottom: 2px solid white;
 }
+
 .home .featured-icons {
   position: absolute;
   top: .5rem;
   right: .5rem;
-  
+
   color: var(--clr-title);
   display: flex;
   flex-direction: column;
   gap: .5rem;
 }
+
 .home .featured-icons i {
   padding: .5rem;
   background-color: white;
@@ -322,10 +350,12 @@ body {
   display: none;
   z-index: 1;
 }
+
 .home .featured-icons i:hover {
   background-color: var(--clr-title);
   color: white;
 }
+
 .home .layer {
   background-color: rgba(0, 0, 0, 0.149);
   position: absolute;
@@ -361,12 +391,15 @@ body {
   gap: 1rem;
   font-size: x-large;
 }
+
 .home .third-showcase .clr-white {
   color: white;
 }
+
 .home .third-showcase .third-placeholder button {
   margin-right: 4.5rem;
 }
+
 .home .third-showcase .fourth-placeholder {
   background-image: url(../../img/showcase-img-4.svg);
   background-color: rgb(217, 217, 217);
@@ -389,18 +422,22 @@ body {
   text-align: center;
   margin-bottom: 3rem;
 }
+
 .home .our-speciality .container {
   background-color: #F5F5F5;
   padding: 3rem;
 }
+
 .home .our-speciality .box-container {
   display: flex;
   gap: 1rem;
   justify-content: space-between;
 }
+
 .home .our-speciality .box-group {
   display: flex;
 }
+
 .home .our-speciality .box {
   background-color: white;
   width: 190px;
@@ -411,10 +448,12 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .home .our-speciality .box small {
   border-bottom: 1px solid gray;
   margin-top: 1rem;
 }
+
 .home .our-speciality .box-gray {
   background-color: #BBBBBB;
   width: 190px;
@@ -437,7 +476,9 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 825px;
+  max-width: 825px;
+  max-height: 650px;
+  flex: 6;
 }
 
 
@@ -448,16 +489,17 @@ body {
 
 .sales-card-wrapper-upper {
   display: grid;
-  grid-template-columns: minmax(255px, 280px) auto;
-  gap: 1.5rem;
-  padding-right: 4rem;
+  grid-template-columns: minmax(auto, 280px) auto;
+  gap: 1rem;
+  padding-right: 3rem;
+  /* flex: auto; */
 }
 
 .sales-card-wrapper-lower {
   display: grid;
-  grid-template-columns: minmax(255px, 280px) auto;
-  gap: 1.5rem;
-  padding-left: 4rem;
+  grid-template-columns: minmax(auto, 280px) auto;
+  gap: 1rem;
+  padding-left: 3rem;
 }
 
 .sales-card-wrapper-upper .card,
@@ -487,7 +529,7 @@ body {
 }
 
 .sales-card-wrapper-upper .card p,
-.sales-card-wrapper-lower .card p { 
+.sales-card-wrapper-lower .card p {
   font-weight: 600;
 }
 
@@ -544,6 +586,7 @@ body {
   height: 120px;
   margin-right: .7rem;
 }
+
 .selling-section .small-sales-card h6 {
   align-self: flex-start;
   font-size: 1rem;
@@ -558,6 +601,7 @@ body {
 .selling-section .small-sales-card p {
   font-weight: 600;
 }
+
 .selling-section .small-sales-card .card-content {
   padding-right: 1.3rem;
 }
@@ -585,6 +629,7 @@ body {
   justify-self: center;
   gap: 1rem;
 }
+
 .info-circles .circle {
   width: 50px;
   height: 50px;
@@ -595,6 +640,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .info-circles .info-content {
   display: flex;
   justify-content: center;
@@ -621,6 +667,7 @@ body {
   padding: .3rem;
   text-align: center;
 }
+
 .footer {
   background-color: #F8F8F8;
   display: flex;
@@ -629,24 +676,29 @@ body {
   padding-block: 2rem;
   gap: 5rem;
 }
+
 .footer .customer-service {
   display: flex;
   flex-direction: column;
   gap: .3rem;
 }
+
 .footer .credit-card {
   display: flex;
   flex-direction: column;
   gap: .3rem;
 }
+
 .footer .our-stores {
   display: flex;
   flex-direction: column;
   gap: .3rem;
 }
-.footer h5{
+
+.footer h5 {
   margin-bottom: .5rem;
 }
+
 .footer p {
   color: #616365;
   font-size: .8rem;
@@ -658,8 +710,97 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
+
 .footer .app-btns {
   display: flex;
   gap: 1rem;
-  
+
 }
+
+/* MEDIA QUERIES */
+
+@media (max-width: 1200px) {
+
+  .sales-card-wrapper-upper .card .card-picture,
+  .sales-card-wrapper-lower .card .card-picture {
+    width: 200px;
+    height: 180px;
+  }
+
+  .sales-card-wrapper-upper .card,
+  .sale-card-wrapper-lower .card {
+    width: 200px;
+  }
+
+  .sales-card-wrapper-upper {
+    grid-template-columns: minmax(auto, 200px) auto;
+  }
+
+  .sales-card-wrapper-lower {
+    grid-template-columns: minmax(auto, 200px) auto;
+  }
+}
+
+@media (max-width: 992px) {
+
+  .sales-card-wrapper-upper .card .card-picture,
+  .sales-card-wrapper-lower .card .card-picture {
+    width: 175px;
+    height: 150px;
+  }
+
+  .sales-card-wrapper-upper .card,
+  .sale-card-wrapper-lower .card {
+    width: 175px;
+  }
+
+  .sales-card-wrapper-upper {
+    grid-template-columns: minmax(auto, 175px) auto;
+  }
+
+  .sales-card-wrapper-lower {
+    grid-template-columns: minmax(auto, 175px) auto;
+  }
+  .selling-section {
+    width: 90%;
+  }
+}
+
+@media (max-width: 768px) {
+  .home .container {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+  .sales-card-wrapper-upper {
+    grid-auto-flow: column;
+    grid-template-rows: 1fr 1fr auto;
+    padding-right: 0;
+    
+  }
+
+  .sales-card-wrapper-lower {
+    grid-auto-flow: column;
+    grid-template-rows: 1fr 1fr auto;
+    padding-right: 0;
+  }
+  .product-sales {
+    height: 650px;
+  }
+  .selling-section {
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .top-selling-section {
+    margin-block: 1rem;
+    height: 200px;
+  }
+  .small-sales-card {
+    height: 90%;
+  }
+}
+
+@media (max-width: 667px) {}
