--- a/e-commerce/src/views/styles/HomeMedia.css
+++ b/e-commerce/src/views/styles/HomeMedia.css
@@ -1,6 +1,10 @@
 
 
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+    .home .our-speciality {
+        display: none;
+    }
+}
 
 @media (max-width: 992px) {
     .home .featured .products {
@@ -13,6 +17,14 @@
 }
 
 @media (max-width: 768px) {
+    .home .second-showcase {
+        margin-top: 0rem;
+        margin-bottom: 2rem;
+    }
+    .home .third-showcase .container {
+        gap: 0rem;
+    }
+
     .home .showcase .d-none {
         display: none;
     }
@@ -39,9 +51,16 @@
 
     .home .third-showcase .container {
         flex-direction: column;
+        margin-bottom: 13.1rem;
     }
 
     /* NAVBAR MENU */
+    .home .header .container {
+        padding-inline: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
     .home .header .menu .brand {
         font-size: 25px;
     }
@@ -56,4 +75,146 @@
     }
 }
 
+@media (max-width: 667px) {
+    .home .featured .products {
+        /* grid-template-columns: none; */
+        grid: none;
+        display: flex;
+    }
+    .home {
+        overflow: hidden;
+    }
+}
+
+
+
+
+
+/* MEDIA QUERIES LOWER */
+@media (max-width: 1200px) {
+
+    .sales-card-wrapper-upper .card .card-picture,
+    .sales-card-wrapper-lower .card .card-picture {
+      width: 200px;
+      height: 180px;
+    }
+  
+    .sales-card-wrapper-upper .card,
+    .sale-card-wrapper-lower .card {
+      width: 200px;
+    }
+  
+    .sales-card-wrapper-upper {
+      grid-template-columns: minmax(auto, 200px) auto;
+    }
+  
+    .sales-card-wrapper-lower {
+      grid-template-columns: minmax(auto, 200px) auto;
+    }
+}
+  
+@media (max-width: 992px) {
+
+
+  
+    .sales-card-wrapper-upper .card .card-picture,
+    .sales-card-wrapper-lower .card .card-picture {
+      width: 175px;
+      height: 150px;
+    }
+  
+    .sales-card-wrapper-upper .card,
+    .sale-card-wrapper-lower .card {
+      width: 175px;
+    }
+  
+    .sales-card-wrapper-upper {
+      grid-template-columns: minmax(auto, 175px) auto;
+    }
+  
+    .sales-card-wrapper-lower {
+      grid-template-columns: minmax(auto, 175px) auto;
+    }
+    .selling-section {
+      width: 90%;
+    }
+}
+  
+@media (max-width: 768px) {
+    .home .container .product-sales {
+        /* margin-top: 17rem; */
+        margin: 0;
+        height: 40vh;
+        border: 1px solid gray;
+    }
+    .home .container .product-sales h2 {
+        font-size: xx-large;
+        margin-bottom: 2rem;
+    }
+
+
+    .home .container {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+    }
+    .sales-card-wrapper-upper {
+      /* grid-auto-flow: column;
+      grid-template-rows: 1fr auto auto;
+      grid-template-columns: minmax(auto, 125px) auto;
+      padding-right: 1rem;
+      padding-left: 0;
+      flex: 3; */
+      display: none;
+    }
+  
+    .sales-card-wrapper-lower {
+      /* grid-auto-flow: column;
+      grid-template-rows: 1fr auto auto;
+      grid-template-columns: minmax(auto, 125px) auto;
+      padding-right: 0;
+      padding-left: 0;
+      flex: 3; */
+      display: none;
+    }
+    .sales-card-wrapper-upper .card .card-picture,
+    .sales-card-wrapper-lower .card .card-picture {
+      width: 125px;
+      height: 100px;
+    }
+    .showcase-flash-sale {
+        height: 35vh;
+    }
+  
+    .sales-card-wrapper-upper .card,
+    .sale-card-wrapper-lower .card {
+      width: 125px;
+    }
+    .product-sales {
+      height: 650px;
+    }
+    .selling-section {
+      width: 70%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .top-selling-section {
+      margin-block: 1rem;
+      height: 200px;
+    }
+    .small-sales-card {
+      height: 90%;
+    }
+    .info-circles {
+      width: 90%;
+      gap: 1rem;
+      flex-direction: column;
+    }
+    .info-circles-mobile {
+      display: flex;
+    }
+}
+  
 @media (max-width: 667px) {}
