--- a/e-commerce/src/views/styles/ProductPage.css
+++ b/e-commerce/src/views/styles/ProductPage.css
@@ -22,6 +22,7 @@ body {
     flex-direction: column;
     width: 275px;
     margin-left: 30px;
+    gap: 3rem;
 }
 .product-page-filter h1{
     font-size: 18px;
@@ -32,6 +33,9 @@ body {
     font-size: 16px;
     font-weight: 500;
     color: var(--pp-clr-gray);
+}
+.product-page-filter h2:hover {
+    color: #FF7373;
 }
 
 /* All Categories CSS */
