--- a/e-commerce/src/views/blog/blogcard-styles.css
+++ b/e-commerce/src/views/blog/blogcard-styles.css
@@ -17,6 +17,10 @@
     background: white;
     transition: all 300ms ease-in-out;
   }
+  .blogcard:hover {
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.451);
+    border-radius: 5px;
+  }
   .blogcard .blogcard-img {
     width: 100%;
     background-repeat: no-repeat;
